# MultipleDesktopClocks

./: .gitignore  README.md  requirements.txt
boveda/: myclock.py  myclock_indicator.py  myclock_indicator_plus.py
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  pyproject.toml  toml_gen.py
src/multiple_desktop_clocks/: about.py  desktop.py  program.py  program_old.py
src/multiple_desktop_clocks/modules/: configure.py
