[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiple_desktop_clocks"
version = "0.1.2"
description = "Display multiple time zones as always-on-top desktop clocks."
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["clock", "widget","indicator","desktop"]
dependencies = [
    "PyQt5",
    "pytz"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/MultipleDesktopClocks/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/MultipleDesktopClocks/tree/main/doc"
"Source" = "https://github.com/trucomanx/MultipleDesktopClocks"

[project.scripts]
"multiple-desktop-clocks" = "multiple_desktop_clocks.program:main"

[tool.setuptools]
packages = ["multiple_desktop_clocks", "multiple_desktop_clocks.modules"]

[tool.setuptools.package-data]
"multiple_desktop_clocks" = ["icons/logo.png"]
